@@ -1,9 +1,10 @@
-// $Id: CHANGELOG.txt,v 1.1.2.10 2008/08/23 20:23:04 boombatower Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.11 2008/08/23 20:24:14 boombatower Exp $
 
 SimpleTest 6.x-2.3, xxxx-xx-xx (development version)
 ------------------------------
 - Backports:
     * #297869: Add xpath method to SimpleTest.
+    * #297894: Add assertLink and assertNoLink to SimpleTest.
 
 SimpleTest 6.x-2.2, 2008-08-15
 ------------------------------
